<resources>
    <string name="app_name">ShoppingList</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">WELCOME</string>
    <string name="defaultUser">USERX</string>
    <string name="newList">new list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="naslov_liste">Naslov liste</string>
    <string name="ok">ok</string>
    <string name="share_list">Share list:</string>
    <string name="this_list_is_empty">This list is empty</string>
    <string name="add">add</string>
    <string name="naslov">NASLOV</string>
    <string name="home">home</string>

    <string name="localIP">http://192.168.209.36/</string>
    <string name="refresh">refresh</string>


</resources>