<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/naslovListe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/naslov_liste"
            ></EditText>
        <Button
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ok"
            android:textSize="15dp"

            ></Button>


    </LinearLayout>

    <TextView
        android:id="@+id/naslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naslov"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="@color/gray" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/share_list"
        android:textColor="@color/gray" />

    <RadioGroup
        android:id="@+id/sharelistRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/yesRadio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Yes"
             />

        <RadioButton
            android:id="@+id/noRadio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="No"

            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/HomeFragmentContainerNewList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="save" />
    </LinearLayout>





</LinearLayout>