<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/defaultUser"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/newListButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"


            android:text="@string/newList" />

        <Button
            android:id="@+id/seeListsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="see shared lists"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/listWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/HomeFragmentContainerWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" />





</LinearLayout>